Add Cloudflare R2 storage integration and resume upload features
- Updated .env.example to include Cloudflare R2 configuration options for storage.
- Enhanced the Settings class to support R2 storage backend and related credentials.
- Introduced StorageService for managing file uploads, downloads, and presigned URL generation with R2.
- Added ResumeParser service for extracting structured data from PDF and DOCX resumes.
- Created utility functions for file handling, including validation and temporary storage.
- Implemented tests for storage service, file handler, and resume parser functionalities.
- Added documentation for R2 storage setup and usage examples.

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,14 @@ CORS_ORIGINS=["http://localhost:5173","http://localhost:3000"]
 # Server
 HOST=0.0.0.0
 PORT=8000
+
+# Storage Configuration
+STORAGE_BACKEND=local  # Options: local, r2
+
+# Cloudflare R2 Configuration (only needed if STORAGE_BACKEND=r2)
+R2_ACCOUNT_ID=your-account-id
+R2_ACCESS_KEY_ID=your-access-key-id
+R2_SECRET_ACCESS_KEY=your-secret-access-key
+R2_BUCKET_NAME=resume-uploads
+R2_REGION=auto
+R2_PUBLIC_URL=  # Optional: https://your-custom-domain.com
