--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,8 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.20
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
+pdfplumber==0.11.0
+PyPDF2==3.0.1
+python-docx==1.1.0
+reportlab==4.4.4
+boto3==1.35.80
