Add OpenRouter AI integration for resume analysis
- Enhanced the resume analysis workflow by integrating OpenRouter AI for generating AI-powered suggestions and rewritten bullet points.
- Added new fields to the ResumeAnalysis model to track AI suggestions, rewritten bullets, and tokens used.
- Implemented AISuggester service to handle AI suggestion generation with structured outputs using the Instructor library.
- Updated configuration settings to include OpenRouter API credentials and options for AI suggestions.
- Created Pydantic schemas for structured AI suggestion outputs.
- Developed manual test scripts to validate AI integration and display results effectively.
- Updated .env.example and .gitignore to reflect new environment variable requirements and prevent sensitive data exposure.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,25 @@
+# =============================================================================
+# SECURITY WARNING: Never commit this file with real credentials!
+# =============================================================================
+# This is a TEMPLATE file (.env.example) - it should contain NO real secrets.
+#
+# Setup Instructions:
+# 1. Copy this file: cp .env.example .env
+# 2. Replace all placeholder values with your real credentials
+# 3. NEVER commit the .env file to version control (already in .gitignore)
+# 4. If credentials are exposed, rotate them IMMEDIATELY
+#
+# How to Get API Keys:
+# - OpenRouter API: https://openrouter.ai/keys
+# - Cloudflare R2: https://dash.cloudflare.com/
+# - PostgreSQL: Your database hosting provider
+#
+# Production Deployment:
+# - Use environment variables from your hosting platform (Vercel, Railway, etc.)
+# - Consider secret management services (AWS Secrets Manager, Vault)
+# - Never hardcode secrets in code or commit them to git
+# =============================================================================
+
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/resume_optimizer_dev
 
@@ -26,3 +48,18 @@ R2_SECRET_ACCESS_KEY=your-secret-access-key
 R2_BUCKET_NAME=resume-uploads
 R2_REGION=auto
 R2_PUBLIC_URL=  # Optional: https://your-custom-domain.com
+
+# OpenRouter AI Configuration (https://openrouter.ai)
+OPENROUTER_API_KEY=sk-or-v1-...
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_MODEL=openai/gpt-4o-mini  # Recommended: Cheap ($0.15/$0.60 per 1M tokens)
+# Alternative models:
+# - openai/gpt-4o-mini-2024-07-18 (specific version)
+# - openai/gpt-4.1-mini (newer, April 2025)
+# - anthropic/claude-3-haiku (fast & high quality)
+# - meta-llama/llama-3.1-70b-instruct (free tier available)
+OPENROUTER_MAX_TOKENS=2000
+OPENROUTER_TEMPERATURE=0.7
+OPENROUTER_SITE_URL=https://resumematch.ai
+OPENROUTER_APP_NAME=ResumeMatch-AI
+ENABLE_AI_SUGGESTIONS=true
