Add Docker support for FastAPI application
- Introduced a Dockerfile for multi-stage builds, optimizing image size and security.
- Added a docker-compose.yml file for local development, including service configuration and environment variable management.
- Created a .dockerignore file to exclude unnecessary files from the Docker build context, improving build efficiency.
- Updated .env.example with Docker deployment instructions and external database usage guidelines.
- Implemented a docker-entrypoint.sh script to manage database readiness and migrations before starting the application.

--- a/.env.example
+++ b/.env.example
@@ -18,9 +18,18 @@
 # - Use environment variables from your hosting platform (Vercel, Railway, etc.)
 # - Consider secret management services (AWS Secrets Manager, Vault)
 # - Never hardcode secrets in code or commit them to git
+#
+# Docker Deployment:
+# - For Docker: Use external DATABASE_URL (not localhost)
+# - Build: docker build -t resume-optimizer-api .
+# - Run: docker run -p 8000:8000 --env-file .env resume-optimizer-api
+# - Compose: docker-compose up --build
+# - See docs/DOCKER_DEPLOYMENT.md for complete guide
 # =============================================================================
 
 # Database
+# IMPORTANT: For Docker, use external database URL (not localhost)
+# Example: postgresql://user:pass@your-db-host.com:5432/resume_optimizer
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/resume_optimizer_dev
 
 # Security
